# spotify_kvm_auto_switcher

./: .gitignore  CLAUDE.md  README.md  config.example.toml  pyproject.toml
scripts/: identify_usb.py  setup_auth.py
service/: com.jeannaude.spotify-kvm-switcher.plist  spotify-kvm-switcher-task.xml  spotify-kvm-switcher.service
src/spotify_kvm_switcher/: __init__.py  __main__.py  config.py  daemon.py  spotify_auth.py  spotify_player.py  usb_monitor.py
